--- a/pitch/index.html
+++ b/pitch/index.html
@@ -25,28 +25,46 @@
 			<div class="slides">
 				<section>
 					<a href="https://nathandem.github.io/floan-ui">
-                                          fLOAN
+                                          fLoan
 					</a>
 					<h3>Credit for everyone</h3>
 					<p>
-						<small>Created by <a href="https://nathandem.github.io/floan-ui/about/team">the floaners</a></small>
+						<small>Created by <a href="https://nathandem.github.io/floan-ui/about/team">the Floaners</a></small>
 					</p>
 				</section>
 
 				<section>
 					<h2></h2>
 					<p>
-						fLOAN enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+					  fLoans are uncollateralized loans meant for personal lending between humans to aid those who do not have collateral.
 					</p>
 				</section>
 
 				<section>
 					<h2></h2>
 					<p>
-					  anyone can to open a creadit line through fLOAN
+					  fLoan uses proof-of-humanity to determine that a requester is human, then the requester may choose the loan principal they desire, how much they will repay, and over what length of time.
 					</p>
+				</section>
+
+				<section>
+					<h2></h2>
 					<p>
-					  fLOAN enables everyone to open a creadit line
+					  Once requested, a lender decides whether they want to lend to the user or not. The lender will taken into account principal, repayment, and trustworthiness.
+					</p>
+				</section>
+
+				<section>
+					<h2></h2>
+					<p>
+					  Once lent, the user is sent the funds then may repay at any time before the end of the duration, if it is not repaid by the end time, their (non-implemented) reputation is slashed.
+					</p>
+				</section>
+
+				<section>
+					<h2></h2>
+					<p>
+					   Future implementations would include: NFT loans or fractionalized loans in ERC20s, a full reputation/credit system, more description for the loan, more avenues to provide lines of trust (such as social media verification), even groups of loans that may be lent to all at once instead of as individuals.
 					</p>
 				</section>
 
